<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataBaseTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_database">Create database</string>
    <string name="add_data">Add data</string>
    <string name="update_data">Update data</string>
    <string name="delete_data">Delete data</string>
    <string name="query_data">Query data</string>
    <string name="replace_data">Replace data</string>
    
    <string name="add_book">Add to book</string>
    <string name="query_book">Query from book</string>
    <string name="update_book">Update book</string>
    <string name="delete_book">Delete from book</string>

</resources>