<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.file.databasetest.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/create_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_database" />

            <Button
                android:id="@+id/add_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_data" />

            <Button
                android:id="@+id/update_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_data" />

            <Button
                android:id="@+id/delete_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_data" />

            <Button
                android:id="@+id/query_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/query_data" />

            <Button
                android:id="@+id/replace_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/replace_data" />

            <Button
                android:id="@+id/add_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_book" />

            <Button
                android:id="@+id/query_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/query_book" />

            <Button
                android:id="@+id/update_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_book" />

            <Button
                android:id="@+id/delete_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_book" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>